--- a/index.html
+++ b/index.html
@@ -141,21 +141,19 @@
       <source src="dancing.webm" type="video/webm">
     </video>
     <div class="overlay">
-      <h1>Et si on fétait ça 🎉</h1>
+      <h1>Et si on fêtait ça 🎉</h1>
     </div>
   </section>
 
   <section style="background-image: url('pecany.jpg');">
     <div class="overlay" style="max-width: 800px">
-      <h2>Le 18 Octobre 2025</h2>
-      <h2>Au <a href="https://domainedepecany.fr/" target="_blank">domaine de Pécany</a>, en <a href="https://maps.app.goo.gl/6Si3f1UqhQVs74Wf6">Dordogne</a></h2>
-      <div style="text-align: justify">
-      <ul>
-        <li>On fait la fête le Samedi 18 soir.</li>
-        <li>Tout le monde peut dormir sur place dans les gites du domaine.</li>
-        <li>La salle, les gites, la piscine couverte et chauffée sont privatisés du Samedi 18 au Lundi 20, pour prolonger la fête le dimanche, profiter d'être ensemble et/ou faire du tourisme selon l'humeur de chacun.</li>
-        <li>On prend en charge la privatisation du domaine, le repas et la fête du Samedi soir. Peut être aussi les chocolatines le Dimanche matin 😸</li>
-        <li>A prévoir de votre coté : Le déplacement sur place, les draps (sinon facturés 10€/lit par le domaine), et les repas du Dimanche (pour ceux qui restent).</li>
+      <h2 style="margin-bottom: 0">Le 18 Octobre 2025,<br/>au domaine de Pécany, en Dordogne</h2>
+      <p><a href="https://maps.app.goo.gl/6Si3f1UqhQVs74Wf6">Voir sur Google Maps</a></p>
+      <ul style="text-align: justify; margin-top: 12px">
+        <li>On fait la fête le samedi 18 soir.</li>
+        <li>Tout le monde peut dormir sur place dans les gîtes du domaine.</li>
+        <li>La salle, les gîtes, la piscine couverte et chauffée sont privatisés du samedi 18 au lundi 20, pour prolonger la fête le dimanche, profiter d'être ensemble et/ou faire du tourisme selon l'humeur de chacun.</li>
+        <li>On prend en charge la privatisation du domaine, le repas du samedi soir. Peut être aussi les chocolatines le dimanche matin 😸</li>
       </ul>
     </div>
   </section>
@@ -168,7 +166,7 @@
       <input type="phone" name="phone" placeholder="Votre numéro de téléphone" required />
       <input type="number" name="adultes" placeholder="Nombre d'adultes" value="" required />
       <input type="number" name="enfants" placeholder="Nombre d'enfants" value="" />
-      <label><input type="checkbox" name="presence_fete" /> &nbsp; Présence à la fête du Samedi soir</label>
+      <label><input type="checkbox" name="presence_fete" /> &nbsp; Présence à la fête du samedi soir</label>
       <label><input type="checkbox" name="premiere_nuit" /> &nbsp; 1ère nuit sur place</label>
       <label><input type="checkbox" name="deuxieme_nuit" /> &nbsp; 2ème nuit sur place</label>
       <textarea name="message" rows="4" placeholder="Un petit mot ou vos questions..."></textarea>
