--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
       <ul style="text-align: justify; margin-top: 12px">
         <li>On fait la fête le samedi 18 soir.</li>
         <li>Tout le monde peut dormir sur place dans les gîtes du domaine.</li>
-        <li>La salle, les gîtes, la piscine couverte et chauffée sont privatisés du samedi 18 au lundi 20, pour prolonger la fête le dimanche, profiter d'être ensemble et/ou faire du tourisme selon l'humeur de chacun.</li>
-        <li>On prend en charge la privatisation du domaine, le repas du samedi soir. Peut être aussi les chocolatines le dimanche matin 😸</li>
+        <li>La salle, les gîtes, la piscine (couverte et chauffée) sont privatisés du samedi 18 au lundi 20, pour prolonger la fête le dimanche, profiter d'être ensemble et/ou faire du tourisme selon l'humeur de chacun.</li>
+        <li>On prend en charge la privatisation du domaine et le repas du samedi soir. Peut-être aussi les chocolatines le dimanche matin 😸</li>
       </ul>
     </div>
   </section>
