--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   <section style="background-image: url('pecany.jpg');">
     <div class="overlay" style="max-width: 800px">
       <h2 style="margin-bottom: 0">Le 18 Octobre 2025,<br/>au domaine de Pécany, en Dordogne</h2>
-      <p><a href="https://domainedepecany.fr/" target="_blank">domainedepecany.fr</a> &nbsp|&nbsp <a href="https://maps.app.goo.gl/6Si3f1UqhQVs74Wf6" target="_blank">Google Maps</a></p>
+      <p><a href="https://domainedepecany.fr/" target="_blank">domainedepecany.fr</a> &nbsp|&nbsp <a href="https://maps.app.goo.gl/1oLzJRH9VM5i43BaA" target="_blank">Google Maps</a></p>
       <ul style="text-align: justify; margin-top: 12px">
         <li>On fait la fête le samedi 18 soir.</li>
         <li>Tout le monde peut dormir sur place dans les gîtes du domaine.</li>
