--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <video style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); min-width: 100%; min-height: 100%; z-index: -1; filter: blur(20px);">
       <source src="dancing.webm" type="video/webm">
     </video> 
-    <video loop autoplay style="height: 100%; max-height: 100%; margin: 0 5px;">
+    <video loop autoplay muted style="height: 100%; max-height: 100%; margin: 0 5px;">
       <source src="dancing.webm" type="video/webm">
     </video>
     <div class="overlay">
