maj danse méline

--- a/index.html
+++ b/index.html
@@ -134,11 +134,10 @@
   </section>
 
   <section style="padding: 0">
-    <video style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); min-width: 100%; min-height: 100%; z-index: -1; filter: blur(20px);">
-      <source src="dancing.webm" type="video/webm">
-    </video> 
+    <img src="dancing.jpg" style="position: fixed; top: 15%; left: 50%; transform: translate(-50%, -15%); min-width: 100%; min-height: 100%; z-index: -1; filter: blur(50px);" />
     <video loop autoplay muted style="height: 100%; max-height: 100%; margin: 0 5px;">
-      <source src="dancing.webm" type="video/webm">
+      <source src="dancing.webm" type='video/webm; codecs="vp9"'>
+      <source src="dancing.mp4" type='video/mp4; codecs="avc1.42001E"'>
     </video>
     <div class="overlay">
       <h1>Et si on fêtait ça 🎉</h1>
